// Java package specifiers
option java_package = "com.basho.riak.protobuf";
option java_outer_classname = "AntidotePB";
option go_package = "proto";


enum CRDT_type {
    COUNTER = 3;
    ORSET = 4;
    LWWREG = 5;
    MVREG = 6;
    GMAP = 8;
    RWSET = 10;
    RRMAP = 11;
    FATCOUNTER = 12;
    FLAG_EW = 13;
    FLAG_DW = 14;
    TOPK = 1;
    TOPK_RMV = 2;
    AVG = 7;
    LEADERBOARD = 9;
    MAXMIN = 0;
    ORMAP = 15;
}

// Riak Error response
message ApbErrorResp {
    required bytes errmsg = 1;
    required uint32 errcode = 2;
}

//------------------
// Counter

// Counter increment request
message ApbCounterUpdate {
    // inc indicates the value to be incremented. To decrement, use a negative value. If no value is given, it will be considered as an increment by 1
    optional sint64 inc = 1;
}

// Response operation
message ApbGetCounterResp {
    required sint32 value = 1;
}


//------------------
// Set

// Set updates request
message ApbSetUpdate{
    enum SetOpType // TODO merge adds/removes
    {
        ADD = 1;
        REMOVE = 2;
    }
    required SetOpType optype = 1;
    repeated bytes adds = 2;
    repeated bytes rems = 3;
}

// Get set request
message ApbGetSetResp {
    repeated bytes value = 1;
}

//------------------
// LWW-register

// Register update
message ApbRegUpdate {
    required bytes value = 1;
}

// Response operation
message ApbGetRegResp {
    required bytes value = 1;
}

//------------------
// MV-register

// use ApbRegUpdate for updates

// response:
message ApbGetMVRegResp {
    repeated bytes values = 1;
}

//------------------
// Map


message ApbMapKey {
    required bytes key = 1;
    required CRDT_type type = 2;
}

message ApbMapUpdate {
    repeated ApbMapNestedUpdate updates = 1;
    repeated ApbMapKey removedKeys = 2;
}

message ApbMapNestedUpdate {
    required ApbMapKey key = 1;
    required ApbUpdateOperation update = 2;
}

message ApbGetMapResp {
    repeated ApbMapEntry entries = 1;
}

message ApbMapEntry {
    required ApbMapKey key = 1;
    required ApbReadObjectResp value = 2;
}

//-------------------
// Flags

message ApbFlagUpdate {
    required bool value = 1;
}

message ApbGetFlagResp {
    required bool value = 1;
}

// General reset operation
message ApbCrdtReset {

}

// Response operation
message ApbOperationResp {
    required bool success = 1;
    optional uint32 errorcode = 2;
}


//--------------------
// Topk and Topk-rmv

// Topk-rmv updates request
message ApbTopkRmvUpdate{
    repeated ApbIntPair adds = 1;
    repeated sint32 rems = 2;
}

//Topk updates request
message ApbTopkUpdate{
	required sint64 playerId = 1;
	required sint64 score = 2;
}

// Value topk/topk-rmv request
/*
message ApbGetTopkResp {
    repeated sint32 values = 1;
}
*/
message ApbGetTopkResp {
	repeated ApbIntPair values = 1;
}

//Holds a (playerId, score) pair
message ApbIntPair {
	required sint32 playerId = 1;
	required sint32 score = 2;
}

//--------------------
// Leaderboard

message ApbLeaderboardUpdate {
	repeated ApbIntPair adds = 1;
    repeated int32 rems = 2;
}

message ApbGetLeaderboardResp {
	repeated int32 values = 1;
}

//--------------------
// Average

message ApbAverageUpdate {
	required int64 value = 1;
	optional int64 nValues = 2;
}

message ApbGetAverageResp {
	required double avg = 1;
}

//--------------------
// MaxMin

message ApbMaxMinUpdate {
    required int64 value = 1;
    required bool isMax = 2;
}

message ApbGetMaxMinResp {
    required int64 value = 1;
}


//--------------------------------------------------------------

// Properties parameters of a transaction
message ApbTxnProperties {
    optional uint32 read_write = 1 ; //default = 0 = read_write, 1 = read_only, 2 = write_only
    optional uint32 red_blue = 2 ; // default = 0 = blue, 1 = red
}

// Object (Key) representation
message ApbBoundObject {
    required bytes key = 1;
    required CRDT_type type = 2;
    required bytes bucket = 3;
}

// Objects to be read
message ApbReadObjects {
    repeated ApbBoundObject boundobjects = 1;
    required bytes transaction_descriptor = 2;
}


// An Object to be updated with specified operation
message ApbUpdateOp {
    required ApbBoundObject boundobject = 1;
    required ApbUpdateOperation operation = 2;
}

message ApbUpdateOperation { // TODO use this above
    optional ApbCounterUpdate counterop = 1;
    optional ApbSetUpdate setop = 2;
    optional ApbRegUpdate regop = 3;
    optional ApbMapUpdate mapop = 5;
    optional ApbCrdtReset resetop = 6;
    optional ApbFlagUpdate flagop = 7;
    optional ApbMaxMinUpdate maxminop = 11;
    optional ApbTopkRmvUpdate topkrmvop = 12;
    optional ApbTopkUpdate topkop = 13;
    optional ApbLeaderboardUpdate leaderboardop = 14;
    optional ApbAverageUpdate avgop = 15;
}

// Objects to be updated
message ApbUpdateObjects {
    repeated ApbUpdateOp updates = 1;
    required bytes transaction_descriptor = 2;
}

// Start Transaction
message ApbStartTransaction {
    optional bytes timestamp = 1;
    optional ApbTxnProperties properties = 2;
}

// Abort Transaction
message ApbAbortTransaction {
    required bytes transaction_descriptor = 1;
}

// Commit Transaction
message ApbCommitTransaction {
    required bytes transaction_descriptor = 1;
}


message ApbStaticUpdateObjects{
    required ApbStartTransaction transaction = 1;
    repeated ApbUpdateOp updates = 2;
}

message ApbStaticReadObjects{
    required ApbStartTransaction transaction = 1;
    repeated ApbBoundObject objects = 2;
}

//Start transaction response
message ApbStartTransactionResp {
    required bool success = 1;
    optional bytes transaction_descriptor = 2;
    optional uint32 errorcode = 3;
}

//Read Objects Response
message ApbReadObjectResp {
    // one of the following:
    optional ApbGetCounterResp counter = 1;
    optional ApbGetSetResp set = 2;
    optional ApbGetRegResp reg = 3;
    optional ApbGetMVRegResp mvreg = 4;
    optional ApbGetMapResp map = 6;
    optional ApbGetFlagResp flag = 7;
    optional ApbGetMaxMinResp maxmin = 12;
    optional ApbGetTopkResp topk = 13;
    optional ApbGetLeaderboardResp leadb = 14;
    optional ApbGetAverageResp avg = 15;
	optional ApbPartialReadResp partread = 8;	//Generic for non-full state reads from any CRDT
}

message ApbReadObjectsResp {
    required bool success = 1;
    repeated ApbReadObjectResp objects = 2;
    optional uint32 errorcode = 3;
}

// Commit Response
message ApbCommitResp {
    required bool success = 1;
    optional bytes commit_time = 2;
    optional uint32 errorcode = 3;
}

message ApbStaticReadObjectsResp {
    required ApbReadObjectsResp objects = 1;
    required ApbCommitResp committime = 2;
}



//Replica connection
message ApbConnectReplica {
    required int64 id = 1;
}

message ApbConnectReplicaResp {
    repeated int64 knownIDs = 1;
}



//Partial reading

enum READ_type {
    FULL = 0;
	//Set
	LOOKUP = 1;
	//Maps
	GET_VALUE = 2;
	HAS_KEY = 3;
	GET_KEYS = 4;
	GET_VALUES = 5;	//Return value for a given set of keys
	//TopK
	GET_N = 6;
	GET_ABOVE_VALUE = 7;	//TODO: Both this and GET_N still need to be implemented in the topK.
}

//Allows both "full state reads" (ApbReadObjects) and "partial reads"
message ApbRead {
	repeated ApbBoundObject fullreads = 1;
	repeated ApbPartialRead partialreads = 2;
	required bytes transaction_descriptor = 3;
}

message ApbStaticRead {
	repeated ApbBoundObject fullreads = 1;
	repeated ApbPartialRead partialreads = 2;
	required ApbStartTransaction transaction = 3;
}

message ApbPartialRead {
	required ApbBoundObject object = 1;
	required READ_type readtype = 2;
	required ApbPartialReadArgs args = 3; 
}

message ApbPartialReadArgs {
	optional ApbSetPartialRead set = 1;
	optional ApbMapPartialRead map = 2;
	optional ApbTopkPartialRead topk = 3;
}

message ApbSetPartialRead {
	optional ApbSetLookupRead lookup = 1;
}

message ApbMapPartialRead {
	optional ApbMapGetValueRead getvalue = 1;
	optional ApbMapHasKeyRead haskey = 2;
	optional ApbMapGetKeysRead getkeys = 3;
	optional ApbMapGetValuesRead getvalues = 4;
}

message ApbTopkPartialRead {
	optional ApbTopkGetNRead getn = 1;
	optional ApbTopkAboveValueRead getabovevalue = 2;
}

//SET
message ApbSetLookupRead {
	required bytes element = 1;
}

//MAP
message ApbMapGetValueRead {
    required bytes key = 1;
    optional ApbMapEmbPartialArgs args = 2;
}

message ApbMapHasKeyRead {
	required bytes key = 1;
}

message ApbMapGetKeysRead {
	
}

//Note: The 2nd argument is optional.
//However, if it's present, then its len must be equal to keys'
message ApbMapGetValuesRead {
	repeated bytes keys = 1;
	repeated ApbMapEmbPartialArgs args = 2;
}

//Helper for identifying a partial read of an embedded CRDT
message ApbMapEmbPartialArgs {
    optional CRDT_type type = 1;
    required READ_type readtype = 2;
    optional ApbPartialReadArgs args = 3;   //If not present, then it's a full read
}

//TOPK
message ApbTopkGetNRead {
	required int32 amount = 1;
}

message ApbTopkAboveValueRead {
	required int32 minValue = 1;
}

//RESP
message ApbPartialReadResp {
	optional ApbSetPartialReadResp set = 1;
	optional ApbMapPartialReadResp map = 2;
	optional ApbTopkPartialReadResp topk = 3;
}

message ApbSetPartialReadResp {
	optional ApbSetLookupReadResp lookup = 1;
}

message ApbMapPartialReadResp {
	optional ApbMapGetValueResp getvalue = 1;	//Used for both mapGetValue and mapGetPartial
	optional ApbMapHasKeyReadResp haskey = 2;
    optional ApbMapGetKeysReadResp getkeys = 3;
    optional ApbMapGetValuesResp getvalues = 4;
}

message ApbTopkPartialReadResp {
	required ApbGetTopkResp pairs = 1;
}

message ApbSetLookupReadResp {
	required bool has = 1;
}

message ApbMapGetValueResp {
    required ApbReadObjectResp value = 1;
    optional CRDT_type crdttype = 2;
    optional READ_type parttype = 3;
}

message ApbMapHasKeyReadResp {
	required bool has = 1;
}

message ApbMapGetKeysReadResp {
	repeated string keys = 1;
}

message ApbMapGetValuesResp {
    repeated bytes keys = 1;
    repeated ApbMapGetValueResp values = 2;
}